Add changes for release 2

--- a/css/css-demo/styles/practice.css
+++ b/css/css-demo/styles/practice.css
@@ -13,3 +13,12 @@ section#contact-info p {
 .list-item {
 	font-size: .8em;
 }
+
+h1::first-letter {
+    color: #ff0000;
+    font-size: xx-large;
+}
+
+section > ul { 
+    background-color: yellow;
+}
